tests/gen-test/test_out/swap-macro.txt
error: expected 'struct' | 'fn' | 'spec' | 'enum' | 'impl' | '#' but got Macro
   --> swap-macro\root.ctl:117:2
    |
117 |  swap! swap! fn -> main uint => 0 ;
    |  ^^^^^ token located here
    |
    = info: grouped items -> list -> item

info: mir repr of functions:


error: no entry points found
 = help: add '#[entry]' to a function that should take this role

